compiler/testData/diagnostics/tests/annotations/AnnotationInContract.fir.kt
import kotlin.contracts.*

@OptIn(ExperimentalContracts::class)
fun foo() {
    contract {
        @<!ANNOTATION_IN_CONTRACT_ERROR!>foo<!><!SYNTAX!><!>
    }
}
